# stonkgs

./: .bumpversion.cfg  .flake8  .gitignore  CONTRIBUTING.rst  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  kg_baseline.rst  nlp_baseline.rst  stonkgs.rst  training.rst
notebooks/: get_embedding_sequences.ipynb  indra_check_ppis.ipynb  indra_class_distribution.ipynb  indra_data_statistics.ipynb  indra_prot_overlap.ipynb  keyword_filter.ipynb  kg_component_check.ipynb  t-sne_plots.ipynb
src/: __init__.py  __main__.py  constants.py  version.py
src/data/: indra.py
src/models/: kg_baseline_model.py  multi_stonkgs_model.py  nlp_baseline_model.py  node2vec.py
src/multi_stonkgs/: __init__.py  cli.py  constants.py
src/multi_stonkgs/data/: __init__.py  indra.py
src/multi_stonkgs/features/: __init__.py
src/multi_stonkgs/models/: __init__.py  kg_baseline_model.py  multi_stonkgs_model.py  nlp_baseline_model.py  node2vec.py
src/stonkgs/: __init__.py  __main__.py  cli.py  constants.py  version.py
src/stonkgs/api/: __init__.py  api.py  constants.py  datasets.py  example.py  get_emmaa.py
src/stonkgs/data/: __init__.py  add_protein_sequences.py  filter_duplicate_evidences.py  filter_evidences.py  filter_for_majority_classes.py  fix_broken_pretraining_dataset.py  indra.py  indra_check_overlaps.py  indra_extraction.py  indra_for_pretraining.py  prot_indra_for_pretraining.py  transe_indra_for_pretraining.py
src/stonkgs/models/: __init__.py  kg_baseline_model.py  multi_stonkgs_model.py  nlp_baseline_model.py  node2vec.py  protstonkgs_finetuning.py  protstonkgs_model.py  stonkgs_finetuning.py  stonkgs_for_embeddings.py  stonkgs_model.py  stonkgs_pretraining.py  stonkgs_transe_model.py  transestonkgs_finetuning.py
src/stonkgs/visualization/: __init__.py  embedding_visualization.py
tests/: __init__.py  test_version.py
