##########################
# Setup.py Configuration #
##########################
[metadata]
name = multi_stonkgs
version = 0.0.1-dev
description = todo
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/multi-stonkgs/multi-stonkgs
download_url = https://github.com/multi-stonkgs/multi-stonkgs/releases
project_urls =
    Bug Tracker = https://github.com/multi-stonkgs/multi-stonkgs/issues
    Source Code = https://github.com/multi-stonkgs/multi-stonkgs

# Author information
author = helena balabin
author_email = helena.balabin.scai.fraunhofer.de
maintainer = helena balabin
maintainer_email = helena.balabin.scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    # TODO add your own free-text keywords

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    # general ML and NLP stuff 
    numpy 
    pandas 
    matplotlib 
    scikit-learn 
    torch 
    transformers 
    mlflow 
    optuna 
    # KG-related
    indra

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    multi_stonkgs = multi_stonkgs.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = multi_stonkgs
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/multi_stonkgs
    .tox/*/lib/python*/site-packages/multi_stonkgs

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
