##########################
# Setup.py Configuration #
##########################
[metadata]
name = stonkgs
version = 0.1.3
description = Sophisticated Transformers for Biomedical Text and Knowledge Graph Data
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/stonkgs/stonkgs
download_url = https://github.com/stonkgs/stonkgs/releases
project_urls =
    Bug Tracker = https://github.com/stonkgs/stonkgs/issues
    Source Code = https://github.com/stonkgs/stonkgs

# Author information
author = helena balabin
author_email = helena.balabin@scai.fraunhofer.de
maintainer = helena balabin
maintainer_email = helena.balabin@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Text Processing
keywords =
    natural language processing 
    transformers
    knowledge graphs 
    representation learning 
    deep learning
    machine learning
    bioinformatics

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Better json loader
    ijson
    # Jupyter notebook
    jupyterlab
    ipywidgets
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # Environment variables
    python-dotenv
    # General ML and NLP stuff
    accelerate
    # deepspeed <- leave out deepspeed for now since it's causing problems
    pytorch-lightning
    numpy 
    pandas 
    matplotlib
    seaborn
    scikit-learn 
    torch==1.8.1
    transformers==4.6.1
    # Huggingface NLP datasets and tokenizers library
    datasets==1.6.2
    tokenizers
    # Logging and monitoring
    mlflow 
    optuna
    psutil
    # KG-related
    indra
    stellargraph
    nodevectors
    pybel
    pystow

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6.0, <3.9.0

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    stonkgs = stonkgs.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = stonkgs
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/stonkgs
    .tox/*/lib/python*/site-packages/stonkgs

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
